# matryca-plumber

./: .coverage.Mac.pid18140.X84d7wXx.HNQIp837rWOh  .coverage.Mac.pid44380.XSvkFEcx.HNQIp837rWOh  .coverage.Mac.pid65545.X7PKOA0x.HNQIp837rWOh  .coverage.Mac.pid70842.XR4rMUXx.HNQIp837rWOh  .coverage.Mac.pid97868.XM7ME3lx.HNQIp837rWOh  .coverage.MacBook-Pro_local.pid87708.XUDW1k7x.HNQIp837rWOh  .coverage.MacBook-Pro_local.pid9762.XdI6qQrx.HNQIp837rWOh  .coverage.MacBook-Pro_local.pid98207.XIZifUAx.HNQIp837rWOh  .cursorignore  .cursorrules  .env.example  .gitignore  .gitnexusrc  .repomixignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PROJECT_DIARY.md  README.md  ROADMAP.md  ROADMAP_IRONCLAD_SHIELD.md  ROADMAP_LLM_WIKI_PHASE_3.md  ROADMAP_LOGSEQ_SUPERPOWERS.md  SECURITY.md  SUPPORT.md  SYSTEM_PROMPT.md  bug_execution_plan.md  bug_execution_plan_part2.md  bug_execution_plan_part3.md  good_first_issues_blueprints.md  llms.txt  matryca-wiki.example.yml  pyproject.toml  repomix.config.json
.cursor/rules/: 00-karpathy-agent-behavior.mdc  01-core-paradigm.mdc  02-python-standards.mdc  03-logseq-api.mdc  04-spatial-parser.mdc  05-release-preparation.mdc  06-auto-changelog.mdc  07-env-example.mdc  08-github-workflow-standards.mdc  09-github-identity-marco-porcellato.mdc  10-tooling-static-analysis-policy.mdc  11-prompt-maintainer.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  epic.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-fix.yml  metrics-saver.yml  release.yml
.well-known/: llms.txt
docs/: ARCHITECTURE.md  BRANDING.md  PROJECT_DIARY.md  PROMPT_ARCHITECTURE.md  RELEASE_PROCESS.md  resilience-llm-json-triz.md  v1.8-OPTIMIZATION-PLAN.md  v1.8-SOFTWARE-EDGE-PLAN.md
docs/integrations/: hermes-agent.md
docs/openspec/: README.md  agent-ax-robustness.md  agent-dx.md  agent-onboarding.md  dual-embedding.md  identity-config.md  ingest.md  l1-l2-routing.md  link-verification.md  lint.md  live-telemetry-ui.md  llm-os-instructions.md  llm-performance.md  logseq-paradigm.md  runtime-bootstrap.md  security-sandbox.md  tana-import.md
docs/quality/: CLAUDE_ARCH_AUDIT_TRIAGE_2026-06-24.md  CLEAN_ARCH_AUDIT_TRIAGE_2026-06.md  EXPERT_AUDIT_TRIAGE_2026-06.md  GITHUB_BUG_BACKLOG.md  REPOmix_AUDIT_TRIAGE_2026-06.md
docs/releases/: v1.10.0-GITHUB.md  v1.10.2-GITHUB.md  v1.10.3-GITHUB.md  v1.10.4-GITHUB.md  v1.10.5-GITHUB.md  v1.10.6-GITHUB.md  v1.11.0-GITHUB.md  v1.11.1-GITHUB.md  v1.11.2-GITHUB.md  v1.12.0-GITHUB.md  v1.9.10-GITHUB.md  v1.9.11-GITHUB.md  v1.9.12-GITHUB.md  v1.9.13-GITHUB.md  v1.9.14-GITHUB.md  v1.9.15-GITHUB.md  v1.9.3-GITHUB.md  v1.9.4-GITHUB.md  v1.9.5-GITHUB.md  v1.9.6-GITHUB.md  v1.9.7-GITHUB.md  v1.9.8-GITHUB.md  v1.9.9-GITHUB.md
docs/roadmaps/: ROADMAP_IRONCLAD_SHIELD.md  ROADMAP_LLM_WIKI.md  ROADMAP_V2_BIOLOGICAL_MEMORY.md  ROADMAP_V2_SHADOW_DB.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: __init__.py  build_system_prompt.py  check_agents_coherence.py  check_graph_read_sandbox.py  check_version_consistency.py  create_expert_audit_issues.sh  create_repomix_audit_issues.sh  extract_changelog.py  github_audit_tracker.py  github_audit_tracker.sh  gitnexus-analyze-embeddings.sh  gitnexus-hf-cache.mjs  populate_gfi_backlog.sh  populate_gfi_tier_d.sh  populate_gfi_tier_e.sh  provision-local-workspace.sh  reindex-code-graph.sh
scripts/data/: v1_9_perfection_audit_issues.json
scripts/github-reorg/: apply.sh
src/: __init__.py  cli.py  config.py  main.py  plumber_entry.py
src/agent/: __init__.py  alias_state.py  brain_config.py  brain_llm.py  context_compressor.py  context_load.py  control_room_progress.py  cooperative_yield.py  git_snapshot.py  graph_dispatch.py  graph_tool_helpers.py  ingestion.py  journey_log.py  l1_memory.py  llm_client.py  llm_context_payload.py  maintenance_daemon.py  mcp_server.py  mcp_telemetry.py  mcp_tool_guard.py  memory_budget.py  memory_tools.py  outline_models.py  page_input_normalizer.py  plumber_config.py  plumber_llm.py  process_priority.py  prompt_constraints.py  prompt_layout.py  quality_gate.py  routing_hint.py  semantic_lint_prompts.py  tana_import.py
src/bridge/: __init__.py  logseq_client.py
src/cli/: __init__.py  __main__.py  tui_dashboard.py  ui_auth.py  ui_server.py
src/daemon/: __init__.py  ast_cache.py  checkpoint.py  config_layer.py  file_watcher.py  git_audit.py  post_write_hooks.py
src/graph/: __init__.py  advanced_query_block.py  alias_index.py  ast_cache.py  backlink_index.py  block_ref_lint.py  bootstrap_harvest.py  bootstrap_status.py  bootstrap_stop.py  cognitive_llm.py  concurrency_probe.py  cooperative_yield.py  daemon_checkpoint.py  dashboard.py  flashcards.py  generated_hub_write.py  generational_cache.py  global_fence_scanner.py  graph_analytics.py  graph_path_validate.py  (+31 more)
tests/: __init__.py  conftest.py  prompt_hash_snapshots.json  test_advanced_query_block.py  test_adversarial_security.py  test_agent_debug_log.py  test_agent_experience_robustness.py  test_agents_coherence.py  test_alias_index.py  test_alias_state.py  test_ast_cache.py  test_atomic_ingestion.py  test_backlink_backpropagator.py  test_block_ref_lint.py  test_bootstrap_status.py  test_bootstrap_yield.py  test_bounded_json.py  test_brain_cognitive_modules.py  test_build_system_prompt.py  test_cli.py  test_cli_output_sanitization.py  test_config.py  test_context_compressor.py  test_control_room_progress.py  test_daemon_checkpoint.py  test_daemon_prompts.py  test_decay.py  test_dual_embedding.py  test_env_example_coverage.py  test_env_parse.py  test_env_placeholders.py  test_extract_changelog.py  test_file_watcher.py  test_generational_cache.py  test_git_audit.py  test_git_snapshot.py  test_graph_analytics.py  test_graph_layer_boundary.py  test_graph_path_hygiene.py  test_graph_post_write.py  (+69 more)
(+148 files in other folders)
