[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matryca-logseq"
version = "1.4.5"
description = "MCP bridge between AI agents and Logseq OG (pure Markdown outliner)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "logseq-matryca-parser==0.3.3",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.scripts]
matryca-logseq-llm-wiki = "src.main:main"
matryca = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "loguru"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logseq_matryca_parser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
