[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matryca-plumber"
version = "1.9.4"
description = "Enterprise-grade, local-first autonomous background AI daemon and headless mutation plane for Logseq OG."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "logseq-matryca-parser>=1.1.1,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "openai>=1.50.0,<3.0.0",
    "instructor>=1.7.0,<2.0.0",
    "rich>=13.9.0,<16.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "packaging>=24.0,<27.0",
    "watchdog>=6.0.0",
    "gitpython>=3.1.50",
]

[project.urls]
Homepage = "https://github.com/MarcoPorcellato/matryca-plumber"
Repository = "https://github.com/MarcoPorcellato/matryca-plumber"
Issues = "https://github.com/MarcoPorcellato/matryca-plumber/issues"

[project.scripts]
matryca-plumber = "src.plumber_entry:main"
matryca-logseq-llm-wiki = "src.main:main"
matryca = "src.cli:main"

[project.optional-dependencies]
edge = [
    "psutil>=6.0.0,<8.0.0",
]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<3.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "frontend"]

[tool.setuptools.package-data]
frontend = ["dist/**/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM", "ASYNC"]
ignore = ["ANN401", "ASYNC109"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "loguru"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logseq_matryca_parser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instructor"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing:skip-covered --cov-fail-under=70"
markers = [
    "slow: performance or memory soak tests (excluded from default CI)",
]
